tying to add cross server homes